log
Wed 27 Mar 2024 06:37:50 PM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
acbcfc4
Wed 27 Mar 2024 06:46:35 PM UTC: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
In file included from test.c:5:
list.c: In function ‘createNode’:
list.c:24:12: error: ‘Node’ has no member named ‘head’
   24 |     newNode->head = NULL;
      |            ^~
list.c:25:12: error: ‘Node’ has no member named ‘tail’
   25 |     newNode->tail = NULL;
      |            ^~
list.c:26:12: error: ‘Node’ has no member named ‘current’
   26 |     newNode->current = NULL;
      |            ^~
Compilation failed
32a53fe
Wed 27 Mar 2024 06:48:30 PM UTC: 
 list.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
In file included from list.c:3,
                 from test.c:5:
list.c: In function ‘createNode’:
list.c:24:12: error: ‘new’ undeclared (first use in this function)
   24 |     assert(new != NULL);
      |            ^~~
list.c:24:12: note: each undeclared identifier is reported only once for each function it appears in
In file included from test.c:5:
list.c:23:12: error: unused variable ‘newNode’ [-Werror=unused-variable]
   23 |     Node * newNode = (Node *)malloc(sizeof(Node));
      |            ^~~~~~~
list.c:29:1: error: control reaches end of non-void function [-Werror=return-type]
   29 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
23c4028
Wed 27 Mar 2024 06:48:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
667288e
Wed 27 Mar 2024 06:53:10 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
8cc3f63
Wed 27 Mar 2024 06:56:16 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
6a28a3e
Wed 27 Mar 2024 06:57:59 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
a1c2666
Wed 27 Mar 2024 07:00:39 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
000c1e6
